closing tag error

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -58,8 +58,8 @@
       <h2>Dashboard</h2>
     </div>
     <div class="dashboard-content">
-      <!-- <div id="greeting">Welcome <%= username %></div> -->
-      <%- include('components/header.ejs', username); %>
+      <%- include('components/header.ejs', username) %>
+
       <button class="logout-button" id="logout-button">Log Out</button>
     </div>
     <script src="../script.js"></script>
