--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -58,7 +58,8 @@
       <h2>Dashboard</h2>
     </div>
     <div class="dashboard-content">
-      <%- include('components/header.ejs', username) %>
+      <%- include('components/header.ejs', username) %> <%-
+      include('components/data.ejs', email) %>
 
       <button class="logout-button" id="logout-button">Log Out</button>
     </div>
